<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.fleichtweis.projeto01.MainActivity"
    android:orientation="vertical"
    android:background="@drawable/background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_weight="3">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/margensRelativeMain">

            <Button
                android:id="@+id/sobrePrefeito"
                android:drawableTop="@android:drawable/ic_menu_agenda"
                android:text="@string/sobrePrefeito"
                style="@style/botoes" />

            <Button
                android:id="@+id/candidatos"
                android:drawableTop="@android:drawable/ic_menu_add"
                android:text="@string/candidatos"
                style="@style/botoes"
                android:layout_alignParentRight="true"/>

            <Button
                android:id="@+id/propostas"
                android:drawableTop="@android:drawable/ic_menu_info_details"
                android:text="@string/propostas"
                style="@style/botoes"
                android:layout_below="@id/sobrePrefeito"/>

            <Button
                android:id="@+id/sobreColigacao"
                android:drawableTop="@android:drawable/ic_menu_info_details"
                android:text="@string/sobreColigacao"
                style="@style/botoes"
                android:layout_below="@id/sobrePrefeito"
                android:layout_alignParentRight="true"/>

            <Button
                android:id="@+id/agenda"
                android:drawableTop="@android:drawable/ic_menu_info_details"
                android:text="@string/agenda"
                style="@style/botoes"
                android:layout_below="@id/propostas"/>

            <Button
                android:id="@+id/redesSociais"
                android:drawableTop="@android:drawable/ic_menu_info_details"
                android:text="@string/redesSociais"
                style="@style/botoes"
                android:layout_below="@id/propostas"
                android:layout_alignParentRight="true"/>

            <Button
                android:id="@+id/noticias"
                android:drawableTop="@android:drawable/ic_menu_info_details"
                android:text="@string/noticias"
                style="@style/botoes"
                android:layout_below="@id/agenda"/>

            <Button
                android:id="@+id/recado"
                android:drawableTop="@android:drawable/ic_menu_info_details"
                android:text="@string/recado"
                style="@style/botoes"
                android:layout_below="@id/agenda"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>
    </ScrollView>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_weight="1"
        android:src="@drawable/fig02"
        android:contentDescription="Candidatos, partidos, coligação e slogan" />

</LinearLayout>