<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.fleichtweis.projeto01.SobrePrefeito"
    android:orientation="vertical"
    android:background="@drawable/background">

    <!-- Banner da Activity Sobre Prefeito -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_weight="1"
        android:src="@drawable/fig02"
        android:contentDescription="@string/descriptionBannerSobrePrefeito"/>

    <!-- Títulos e textos da Activity -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_weight="3"
        android:orientation="vertical">

        <!-- Título da activity -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tituloSobrePrefeito"
            style="@style/tituloActivitySobrePrefeito"
            />

        <!-- Texto sobre o candidato a prefeito -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textoSobrePrefeito"
            style="@style/textoActivitySobrePrefeito"
            />

        <!-- Título 2 da activity - Trajetória do candidato -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tituloTrajetoria"
            style="@style/tituloActivitySobrePrefeito"
            />

        <!-- Texto sobre a trajetória do candidato -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textoSobreTrajetoria"
            style="@style/textoActivitySobrePrefeito"
            />

    </LinearLayout>
</LinearLayout>
