<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.fleichtweis.projeto01.SobreColigacao"
    android:orientation="vertical"
    android:background="@drawable/background">


    <!-- Título e texto da Activity -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_weight="3"
        android:orientation="vertical">

        <!-- Título da activity -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tituloSobreColigacao"
            style="@style/tituloActivity"
            />

        <!-- Texto sobre o candidato a prefeito -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textoSobreColigacao"
            style="@style/textoActivity"
            android:layout_marginBottom="15dp"
            />

    </LinearLayout>


    <!-- Banner da Activity Sobre Coligação -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_weight="1"
        android:src="@drawable/fig02"
        android:contentDescription="@string/descriptionBannerSobreColigacao"/>

</LinearLayout>
